--- a/index.html
+++ b/index.html
@@ -11,5 +11,22 @@
    <header class="bg-light text-center mb-4 p-3">
         <img src="assets/img/logo.png" alt="Find-A-Pet"> 
    </header>
+   <div class="container">
+       <form action="" id="pet-form">
+           <div class="form-group">
+               <label for="animal"></label>
+               <select name="" id="animal" class="form-control form-control-lg mb-3">
+                   <option value="cat">Cat</option>
+                   <option value="dog">Dog</option>
+                   <option value="bird">Bird</option>
+                   <option value="barnyard">Barnyard</option>
+               </select>
+               <input type="text" id="zip" class="form-control form-control-lg" placeholder="Enter your zipcode">
+               <input type="submit" value="Find" class="btn btn-dark btn-lg btn-block mt-3">
+           </div>
+       </form>
+
+       <div id="results"></div>
+   </div>
 </body>
 </html>
