--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
        <div id="results"></div>
    </div>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch-jsonp/1.1.3/fetch-jsonp.min.js"></script>
    <script src="js/main.js"></script>
 </body>
 </html>
